@@ -70,3 +70,11 @@ void LocationEdit::paintEvent(QPaintEvent* ev)
     if (m_progress == 100)
         m_clearTimer.start(100);
 }
+
+void LocationEdit::focusInEvent(QFocusEvent* ev)
+{
+    QLineEdit::focusInEvent(ev);
+#ifdef Q_WS_MAEMO_5
+    QTimer::singleShot(0, this, SLOT(selectAll()));
+#endif
+}
