@@ -44,6 +44,7 @@ private slots:
 
 protected:
     virtual void paintEvent(QPaintEvent*);
+    virtual void focusInEvent(QFocusEvent*);
 
 private:
     int m_progress;
